fixes letter spacing on main banner

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -210,6 +210,7 @@
     letter-spacing: 3px;
     font-size: 37px;
     padding: 0 50px;
+    letter-spacing: 0px;
   }
   .title{
     font-weight: 300;
